# ha-child-schedule

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/child_schedule/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  demo.py  device_tracker.py  entity.py  manifest.json  runtime_state.py  runtime_store.py  schedule_builder.py  sensor.py  services.py  services.yaml  strings.json
custom_components/child_schedule/engine/: __init__.py  engine.py  evaluator.py  timeline.py
custom_components/child_schedule/entities/: __init__.py  binary_sensor.py  calendar.py  device_tracker.py  sensor.py
custom_components/child_schedule/models/: __init__.py  child.py  event.py  schedule.py  status.py
custom_components/child_schedule/options_flow/: __init__.py  flow.py  labels.py  selectors.py
custom_components/child_schedule/rules/: __init__.py  base.py  date_range.py  exception.py  override.py  school.py  vacation.py  weekly.py
custom_components/child_schedule/translations/: en.json  fr.json
custom_components/child_schedule/utils/: __init__.py  calendar_events.py  datetime.py  holidays.py  location_labels.py  school_holidays.py  school_holidays_api.py
tests/: __init__.py  test_calendar_events.py  test_demo_schedule.py  test_engine.py  test_ha_datetime.py  test_location_labels.py  test_runtime_state.py  test_schedule_builder.py  test_school_holidays_api.py  test_transitions.py
